--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,24 @@
         "biến",
         "chiến",
         "chơi",
+        "Chuyển",
+        "hiện",
+        "hình",
         "khác",
+        "Khởi",
+        "không",
         "kiểm",
         "Kiểm",
         "lưới",
         "lượt",
+        "người",
+        "nhật",
         "phương",
         "Phương",
         "thắng",
         "thức",
+        "Thực",
+        "trong",
         "truy"
     ]
 }
